@startuml

title __FRAG_RECORD's Class Diagram__\n

  namespace com.example.csufttally {
    namespace frag_record {
      abstract class com.example.csufttally.frag_record.BaseRecordFragment {
          ~ beizhuTv : TextView
          ~ keyboardView : KeyboardView
          ~ moneyEt : EditText
          ~ timeTv : TextView
          ~ typeGv : GridView
          ~ typeIv : ImageView
          ~ typeList : List<TypeBean>
          ~ typeTv : TextView
          + loadDataToGv()
          + onClick()
          + onCreate()
          + onCreateView()
          {abstract} + saveAccountToDB()
          + showBZDialog()
          - initView()
          - setGVListener()
          - setInitTime()
          - showTimeDialog()
      }
    }
  }
  

  namespace com.example.csufttally {
    namespace frag_record {
      class com.example.csufttally.frag_record.IncomeFragment {
          + loadDataToGv()
          + saveAccountToDB()
      }
    }
  }
  

  namespace com.example.csufttally {
    namespace frag_record {
      class com.example.csufttally.frag_record.OutcomeFragment {
          + loadDataToGv()
          + saveAccountToDB()
      }
    }
  }
  

  namespace com.example.csufttally {
    namespace frag_record {
      class com.example.csufttally.frag_record.TypeBaseAdapter {
          ~ context : Context
          ~ mDatas : List<TypeBean>
          ~ selectPos : int
          + TypeBaseAdapter()
          + getCount()
          + getItem()
          + getItemId()
          + getView()
      }
    }
  }
  

  com.example.csufttally.frag_record.BaseRecordFragment .up.|> android.view.View.OnClickListener
  com.example.csufttally.frag_record.BaseRecordFragment -up-|> androidx.fragment.app.Fragment
  com.example.csufttally.frag_record.BaseRecordFragment o-- com.example.csufttally.db.AccountBean : accountBean
  com.example.csufttally.frag_record.BaseRecordFragment o-- com.example.csufttally.frag_record.TypeBaseAdapter : adapter
  com.example.csufttally.frag_record.IncomeFragment -up-|> com.example.csufttally.frag_record.BaseRecordFragment
  com.example.csufttally.frag_record.OutcomeFragment -up-|> com.example.csufttally.frag_record.BaseRecordFragment
  com.example.csufttally.frag_record.TypeBaseAdapter -up-|> android.widget.BaseAdapter


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
